added missing foundations

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -91,6 +91,46 @@
   year         = {1990}
 }
 
+@online{iso:can,
+  author       = {International Organization for Standardization},
+  title        = {ISO 11898-1:2015 -- Controller area network (CAN) -- Part 1: Data link layer and physical signalling},
+  url          = {https://www.iso.org/standard/63648.html},
+  urldate      = {2026-02-15},
+  year         = {2015}
+}
+
+@online{kafka:docs,
+  author       = {Apache Software Foundation},
+  title        = {Apache Kafka Documentation},
+  url          = {https://kafka.apache.org/documentation/},
+  urldate      = {2026-02-15},
+  year         = {2023}
+}
+
+@online{ebpf:what,
+  author       = {eBPF Foundation},
+  title        = {What is eBPF?},
+  url          = {https://ebpf.io/what-is-ebpf/},
+  urldate      = {2026-02-15},
+  year         = {2025}
+}
+
+@online{questdb:architecture,
+  author       = {QuestDB},
+  title        = {Architecture Overview - QuestDB},
+  url          = {https://questdb.com/docs/architecture/questdb-architecture/},
+  urldate      = {2026-02-15},
+  year         = {2025}
+}
+
+@online{otel:what,
+  author       = {OpenTelemetry Authors},
+  title        = {What is OpenTelemetry?},
+  url          = {https://opentelemetry.io/docs/what-is-opentelemetry/},
+  urldate      = {2026-02-15},
+  year         = {2025}
+}
+
 @online{Holt1957,
   author       = "Charles C. Holt",
   title        = "Forecasting Seasonals and Trends by Exponentially Weighted Moving Averages",
