added heartbeat description

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -621,6 +621,13 @@
   year         = "2026"
 }
 
+@online{heartbeat,
+  author       = "Wikipedia",
+  title        = "Heartbeat (computing)",
+  url          = "https://en.wikipedia.org/wiki/Heartbeat_(computing)",
+  urldate      = "2026-02-15",
+  year         = "2026"
+}
 
 % use electronic, misc or online for links
 % book for entire books 
