--- a/thesis.tex
+++ b/thesis.tex
@@ -67,12 +67,12 @@
 \paginavuota % to manually create a blank page
 
 % summary (uncomment until "end summary" if needed)
-%\sommario
-%\input{content/summary}
+\sommario
+\input{content/summary}
 
-%\phantom{0}
-%\cleardoublepage
-%\thispagestyle{empty}
+\phantom{0}
+\cleardoublepage
+\thispagestyle{empty}
 % end summary
 
 \ringraziamenti % acknowledgements
@@ -106,7 +106,7 @@
 % a blank page appears before the first chapter in some configurations, on the last version it doesn't
 
 % chapters go here
-\input{content/chapters/chapter1}
+\input{content/chapters/introduction}
 \input{content/chapters/foundations/chapter}
 \input{content/chapters/library_architecture/chapter}
 \input{content/chapters/benchmarks/chapter}
