--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,20 @@
+
+@online{goccia:github,
+  author       = {Omar Ferro},
+  title        = {Goccia: High Performance Golang Pipeline Library},
+  url          = {https://github.com/FerroO2000/goccia},
+  urldate      = {2026-02-17},
+  year         = {2025}
+}
+
+@online{goccia:pkgdev,
+  author       = {Omar Ferro},
+  title        = {goccia package - github.com/FerroO2000/goccia},
+  url          = {https://pkg.go.dev/github.com/FerroO2000/goccia},
+  urldate      = {2026-02-17},
+  year         = {2025}
+}
+
 @online{go:design,
   author       = {The Go Authors},
   title        = {The Go Programming Language},
