--- a/common/thesis_info.tex
+++ b/common/thesis_info.tex
@@ -3,10 +3,10 @@
 \newcommand{\thesissubtitle}{} % not strictly necessary, leave empty if not needed
 \newcommand{\thesiscandidatename}{Omar}
 \newcommand{\thesiscandidatesurname}{Ferro}
-\newcommand{\thesissupervisoronename}{Name}
-\newcommand{\thesissupervisoronesurname}{Surname}
-\newcommand{\thesissupervisortwoname}{Name}
-\newcommand{\thesissupervisortwosurname}{Surname}
+\newcommand{\thesissupervisoronename}{Risso}
+\newcommand{\thesissupervisoronesurname}{Fulvio}
+\newcommand{\thesissupervisortwoname}{}
+\newcommand{\thesissupervisortwosurname}{}
 \newcommand{\thesissupervisorthreename}{Name}
 \newcommand{\thesissupervisorthreesurname}{Surname}
 \newcommand{\thesisdate}{Mese Anno}
