Updates from Overleaf

--- a/common/thesis_info.tex
+++ b/common/thesis_info.tex
@@ -3,8 +3,8 @@
 \newcommand{\thesissubtitle}{} % not strictly necessary, leave empty if not needed
 \newcommand{\thesiscandidatename}{Omar}
 \newcommand{\thesiscandidatesurname}{Ferro}
-\newcommand{\thesissupervisoronename}{Fulvio Giovanni Ottavio}
-\newcommand{\thesissupervisoronesurname}{Risso}
+\newcommand{\thesissupervisoronename}{Name}
+\newcommand{\thesissupervisoronesurname}{Surname}
 \newcommand{\thesissupervisortwoname}{Name}
 \newcommand{\thesissupervisortwosurname}{Surname}
 \newcommand{\thesissupervisorthreename}{Name}
