--- a/common/thesis_info.tex
+++ b/common/thesis_info.tex
@@ -4,13 +4,13 @@
 \newcommand{\thesiscandidatename}{Omar}
 \newcommand{\thesiscandidatesurname}{Ferro}
 \newcommand{\thesissupervisoronename}{Risso}
-\newcommand{\thesissupervisoronesurname}{Fulvio}
+\newcommand{\thesissupervisoronesurname}{Fulvio Giovanni Ottavio}
 \newcommand{\thesissupervisortwoname}{}
 \newcommand{\thesissupervisortwosurname}{}
 \newcommand{\thesissupervisorthreename}{Name}
 \newcommand{\thesissupervisorthreesurname}{Surname}
-\newcommand{\thesisdate}{Mese Anno}
-\newcommand{\thesiscourse}{Corso di Laurea}
+\newcommand{\thesisdate}{Marzo 2026}
+\newcommand{\thesiscourse}{Ingegneria Informatica (Computer Engineering)}
 \newcommand{\academicYear}{A.a. 2025/2026}
 \newcommand{\thesisuniversity}{Politecnico di Torino}
 \newcommand{\thesiscandidatetext}{Candidati}
