--- a/content/acknowledgements.tex
+++ b/content/acknowledgements.tex
@@ -1,5 +1,9 @@
-% acknowledgements
+Desidero innanzitutto ringraziare il mio relatore, il Prof. Fulvio Giovanni Ottavio Risso, e il PhD Student Jacopo Marino, per avermi guidato con competenza e professionalità durante la stesura di questo lavoro di tesi. 
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac turpis. Pretium nibh ipsum consequat nisl vel pretium lectus quam. Urna molestie at elementum eu facilisis sed odio morbi quis. Sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. At in tellus integer feugiat. Mauris rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar. Commodo sed egestas egestas fringilla. Nunc lobortis mattis aliquam faucibus purus in massa. Facilisis magna etiam tempor orci eu lobortis elementum nibh. Elementum curabitur vitae nunc sed velit dignissim. Neque volutpat ac tincidunt vitae. Massa id neque aliquam vestibulum morbi blandit cursus risus at. Porta non pulvinar neque laoreet suspendisse interdum consectetur. Turpis in eu mi bibendum. Ut tristique et egestas quis ipsum suspendisse. Integer quis auctor elit sed vulputate mi sit amet. Viverra nam libero justo laoreet sit amet cursus.
+Un ringraziamento particolare va al team SquadraCorse Polito. Aver avuto l'opportunità di applicare e validare la libreria Goccia all'interno di un sistema di telemetria reale, in un contesto dinamico e sfidante come quello del \textit{motorsport} universitario, ha rappresentato un valore aggiunto inestimabile per questo elaborato. Grazie a tutti i membri del reparto per la collaborazione tecnica e per i continui spunti di miglioramento.
+
+Voglio esprimere la mia più profonda gratitudine alla mia famiglia. Ai miei genitori, per aver sempre creduto nelle mie capacità, per i sacrifici sostenuti negli anni e per l'appoggio incondizionato che non mi hanno mai fatto mancare. Se oggi ho raggiunto questo importante traguardo, è soprattutto grazie al loro costante incoraggiamento.
+
+Infine, un pensiero speciale va ai miei amici di sempre.
 
 \vspace*{5\baselineskip}
